--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "homepage": "",
     "bugs": {
     },
-    "license": "MIT",
-    "author": "Start Bootstrap",
+    "license": "",
+    "author": "ROOTCR",
     "contributors": [
         "Isaías Arce"
     ],
